# programethingy

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
